--- a/frontend/myapp/component/navbar.less
+++ b/frontend/myapp/component/navbar.less
@@ -26,3 +26,17 @@
   width: 100%;
   z-index: 1;
 }
+@media screen and (max-width: 375px) {
+  .custom-title {
+    display: none;
+  }
+  .TimeDisplay {
+    display: none;
+  }
+  .custom-tabs {
+    margin: 0 0 0 3%;
+    width: 200px;
+    font-size: 1px;
+    padding: 0;
+  }
+}
