--- a/frontend/myapp/src/pages/index.less
+++ b/frontend/myapp/src/pages/index.less
@@ -1,3 +1,43 @@
-.title {
-  background: rgb(121, 242, 157);
+* {
+  padding: 0;
+  margin: 0;
+  outline: none;
+  border: none;
+}
+.body_user {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../../public/assert/user.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+}
+.timeline {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  grid-gap: 20px;
+}
+.container_timeline{
+  background: #ffffff;
+  padding: 20px;
+  border-radius: 5px;
+  width: 400px;
+  height: 300px;
+  max-width: 90%;
+  margin: auto;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+}
+.container_timeline_left{
+  background: #ffffff;
+  padding: 20px;
+  border-radius: 5px;
+  width: 800px;
+  height: 300px;
+  max-width: 90%;
+  margin: auto;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
