--- a/frontend/myapp/component/navbar.less
+++ b/frontend/myapp/component/navbar.less
@@ -83,11 +83,7 @@
   height: 25px; 
   margin-right: 10px;
 }
-@media screen and (max-width: 900px) {
-  .layout{
-    margin-left: -30%;
-  }
-}
+
 @media screen and (max-width: 375px) {
   .TimeDisplay {
     display: none;
@@ -106,3 +102,8 @@
       display: none;
     }
 }
+// @media screen and (max-width: 900px) {
+//   .layout{
+//     margin-left: -30%;
+//   }
+// }
