--- a/frontend/myapp/src/pages/index.less
+++ b/frontend/myapp/src/pages/index.less
@@ -5,7 +5,7 @@
   border: none;
 }
 .body_user {
-  min-height: 100vh;
+  // min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
