--- a/frontend/myapp/src/pages/forgetpassword.less
+++ b/frontend/myapp/src/pages/forgetpassword.less
@@ -4,7 +4,7 @@
     outline: none;
     border: none;
 }
-.body_login_register{
+.container_forgetpassword_body{
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -16,15 +16,16 @@
     background-attachment: fixed;
 }
 .icon-container {
-  position: absolute;
-  top: 30px;
-  left: 30px;
-}
-.icon-container img {
-  width: 30%; 
-  height: auto;
-}
-.container_login_register {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+  }
+  .icon-container img {
+    width: 30%; 
+    height: auto;
+  }
+  .container_forgetpassword {
+    position: relative;
     background: #ffffff;
     padding: 20px;
     border-radius: 5px;
@@ -34,23 +35,15 @@
     margin: auto;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
   }
-  
-  @media (max-width: 500px) {
-    .container_login_register {
-        background: #ffffff;
-        padding: 20px;
-        border-radius: 5px;
-        width: 70%;
-        height: 70%;
-        max-width: 90%;
-        margin: auto;
-        box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-    }
-  }
-  .Submit{
-    display: flex; 
+  .container_forgetpassword .anticon-close-circle_black {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+}
+.title_forgetpassword {
+    display: flex;
     justify-content: center;
     align-items: center;
-  
-  }
-
+    text-align: center;
+}
