--- a/frontend/myapp/src/pages/register.less
+++ b/frontend/myapp/src/pages/register.less
@@ -15,6 +15,15 @@
     background-position: center center;
     background-attachment: fixed;
 }
+.icon-container {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+}
+.icon-container img {
+  width: 30%; 
+  height: auto;
+}
 .container_signin {
   background: #ffffff;
   padding: 20px;
