--- a/frontend/myapp/component/navbar.less
+++ b/frontend/myapp/component/navbar.less
@@ -11,7 +11,9 @@
   height: 64px;
   
 }
-
+.ant-layout-content{
+  display: none;
+}
 .custom-tabs .ant-tabs-tab-active .ant-tabs-tab-btn {
     color: white !important;
 }  
