--- a/frontend/myapp/component/navbar.less
+++ b/frontend/myapp/component/navbar.less
@@ -11,9 +11,7 @@
   height: 64px;
   
 }
-.ant-layout-content{
-  display: none;
-}
+
 .custom-tabs .ant-tabs-tab-active .ant-tabs-tab-btn {
     color: white !important;
 }  
@@ -99,7 +97,7 @@
   padding: 20px;
   border-radius: 5px;
   width: 1275px;
-  height: 300px;
+  height: 200px;
   max-width: 100%;
   margin: auto;
   box-shadow: 0px 0px 10px transparent;
@@ -124,7 +122,7 @@
       display: none;
     }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1289px) {
   .welcome_container {
     width: 725px;
     max-width: 100%;
@@ -143,18 +141,22 @@
   }
 }
 @media screen and (max-width: 505px) {
-.welcome {
-  left: -130%;
-  top:-20%;
-  }
   .welcome_container {
-    width: 200px;
     max-width: 100%;
+    height: 250px;
   }
+  .welcome {
+    top:8%;
+    }
 }
 @media screen and (max-width: 400px) {
   .welcome {
-    left: -110%;
-    top:-40%;
+    left: -35%;
+    top:-35%;
     }
+    .welcome_container {
+      max-width: 90%;
+      height: 200px;
+    }
+    
 }
