--- a/frontend/myapp/src/pages/index.less
+++ b/frontend/myapp/src/pages/index.less
@@ -58,7 +58,15 @@
   max-width: 100%;
   margin: auto;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-  margin-bottom: 100px;
+  margin-bottom: 60px;
+  justify-content: center; 
+  align-items: center;
+}
+.course-Page {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  
 }
 .course-card:not(:last-child) {
   margin-right: 70px; 
@@ -81,7 +89,7 @@
 .overlay-content {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   height: 100%;
   color: black;
@@ -91,14 +99,12 @@
 .overlay-content span:first-child {
   font-size: 1em;
   position: relative;
-  left: -24%;
   font-family:  'Comic Sans MS';
 }
 
 .overlay-content span:last-child {
   font-size: 1em;
   position: relative;
-  left: -32%;
   font-family:  'Comic Sans MS';
 }
 
@@ -124,7 +130,7 @@
   display: grid;
   grid-template-columns: 1.5fr 1fr;
   grid-gap: 20px;
-  margin-top: 20px;
+  margin-top: 0px;
 }
 .card {
   padding: 20px;
@@ -218,8 +224,6 @@
 .calendar .ant-picker-calendar-full .ant-picker-calendar-header .ant-picker-calendar-year-select {
   margin: 0 5px;
 }
-
-
 @media (max-width: 1289px) {
   .timeline {
     grid-template-columns: 1fr;
@@ -254,10 +258,11 @@
   }
   .calendar {
     width: 800px;
-    height: 350px;
+    height: auto;
+    margin-top: 30px;
   }
   .card {
-    margin-top: 40px;
+    margin-top: 10px;
   }
   .button-container button {
     margin: 0 100px;
