--- a/frontend/myapp/src/pages/studentcourse.less
+++ b/frontend/myapp/src/pages/studentcourse.less
@@ -95,6 +95,14 @@
   line-height: 50px;
   margin-bottom: 15px;
 }
+.outline_img{
+  
+  // border:1px solid red;
+  text-align: center;
+  max-width: 500px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
 .outline_title_second{
   // font-size: 17px;
   font-weight: bold;
