--- a/frontend/myapp/src/pages/studentcourse.less
+++ b/frontend/myapp/src/pages/studentcourse.less
@@ -103,6 +103,9 @@
   margin: 0 auto;
   margin-bottom: 20px;
 }
+.outline_img img{
+  max-width: 500px;
+}
 .outline_title_second{
   // font-size: 17px;
   font-weight: bold;
@@ -137,8 +140,14 @@
 .materials_content{
   font-size: 16px;
 }
+.materials_img{
+  max-width: 500px;
+  text-align: center;
+  margin: 0 auto;
+}
 .downloadicon{
   width: 20px;
+  height: 20px;
   margin-right: 10px;
 }
 .downloadfile{
@@ -156,6 +165,12 @@
   border: 2px dashed #7EA6E0;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+.react-player{
+  margin: 0 auto!important;
+}
+.video_title{
+  text-align: center;
 }
 .ass_title{
   font-weight: bold;
