student course view

--- a/frontend/myapp/src/pages/studentcourse.less
+++ b/frontend/myapp/src/pages/studentcourse.less
@@ -54,6 +54,7 @@
 }
 .stu_left_list div{
   height: 40px;
+  width: 160px;
   line-height: 40px;
   border:1px solid #000;
   border-radius: 10px;
@@ -63,6 +64,9 @@
   padding-left: 25px;
   background-color: #fff;
   cursor: pointer;
+}
+.btn{
+  width: 160px;
 }
 .stu_right_content{
   flex: 1;
@@ -80,6 +84,7 @@
   margin-right: 8px;
 }
 .stu_icon_last_list{
+  width: 160px;
   border: 1px dashed #97D077!important;
   background-color: #EBF3FF;
 }
