--- a/frontend/myapp/src/pages/studentcourse.less
+++ b/frontend/myapp/src/pages/studentcourse.less
@@ -24,9 +24,16 @@
   color: gray;
   font-size: 14px;
 }
+.stu_flex{
+  flex: 1
+}
+.wid100{
+  width: 100%;
+}
 .stu_title p{
   margin: 0;
   cursor: pointer;
+  margin-right: 10px;
 }
 .selected{
   color: black;
@@ -40,6 +47,9 @@
 }
 .stu_title_bar{
   display: none;
+}
+.mrt{
+  margin-right: 10px;
 }
 .stu_content{
   display: flex;
