--- a/frontend/myapp/src/pages/studentcourse.less
+++ b/frontend/myapp/src/pages/studentcourse.less
@@ -165,6 +165,9 @@
   height: 20px;
   margin-right: 10px;
 }
+.downloadfile_wrap{
+  text-align: end;
+}
 .downloadfile{
   color: #A680B8;
   // float: right;
@@ -172,8 +175,9 @@
   padding: 10px;
   margin-top: 20px;
   cursor: pointer;
-  display: flex;
-  flex-direction: row-reverse;
+  display: inline-block;
+  // display: flex;
+  // flex-direction: row-reverse;
 }
 .dashline{
   width: 100%;
