studentcourse update assignment

--- a/frontend/myapp/src/pages/studentcourse.less
+++ b/frontend/myapp/src/pages/studentcourse.less
@@ -200,6 +200,11 @@
 }
 .ass_title_second{
   text-align: center;
+  margin-top: 10px;
+}
+.ass_wrap{
+  padding:20px;
+  border-bottom: 1px solid rebeccapurple;
 }
 .stu_timeicon{
   width: 20px;
@@ -221,4 +226,7 @@
 .uploadicon{
   width: 40px;
   margin-right: 10px;
+}
+.bb{
+  border: 10px solid #000;
 }
