--- a/frontend/myapp/src/pages/index.less
+++ b/frontend/myapp/src/pages/index.less
@@ -41,6 +41,7 @@
   margin: auto;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
+
 .recently_select_course{
   align-self: flex-start;
   position: relative;
@@ -107,7 +108,13 @@
   position: relative;
   font-family:  'Comic Sans MS';
 }
-
+.ant-list-item-meta-avatar{
+  width: 15%;
+}
+.ant-avatar {
+  width: 55px;
+  height: 55px;
+}
 .square-avatar {
   border-radius: 0;
 }
@@ -159,7 +166,7 @@
   z-index: 1;
 }
 
-.card:hover .custom-card:before {
+.custom-card:hover:before {
   background: rgba(0, 0, 0, 0.2);
 }
 
@@ -174,15 +181,19 @@
   left: 55%;
 }
 
-.card:hover .button-container {
+.button-container.show {
   display: block;
 }
 .button-container button {
   margin: 0 100px;
 }
-
 .intro-card .ant-card-meta-avatar {
-  width: 'auto';
+  height: 255.66px;
+  width: 50%;
+  margin-top: 20px;
+}.intro-card .ant-card-meta-detail {
+  margin-top: 20px;
+  margin-left: 50px;
 }
 .custom-card  .ant-card-meta-avatar {
   width: 50%;
@@ -243,7 +254,7 @@
     padding: 20px;
     border-radius: 5px;
     width: 800px;
-    height: 250px;
+    height: auto;
     max-width: 90%;
     margin: auto;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
@@ -291,7 +302,7 @@
     padding: 20px;
     border-radius: 5px;
     width: 380px;
-    height: 380px;
+    height: auto;
     max-width: 90%;
     margin: auto;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
@@ -305,8 +316,14 @@
   .custom-card .ant-card-meta-avatar {
     width: 60%;
   }
+  .intro-card .ant-card-meta-detail {
+    margin-top: 20px;
+    margin-left: 30px;
+  }
   .intro-card .ant-card-meta-avatar {
-    width: 60%;
+    width: 50%;
+    height: 170px;
+    margin-top: 20px;
   }
   .intro-card .ant-card-meta-avatar {
     width: 200px;
@@ -379,6 +396,11 @@
 .button-container.show {
   left: 48%;
   width: 380px;
+}
+.intro-card .ant-card-meta-avatar {
+  width: 50%;
+  height: 130px;
+  margin-top: 20px;
 }
 }
 
