student assignment update

--- a/frontend/myapp/src/pages/studentcourse.less
+++ b/frontend/myapp/src/pages/studentcourse.less
@@ -227,6 +227,17 @@
   width: 40px;
   margin-right: 10px;
 }
-.bb{
-  border: 10px solid #000;
+.uploadbtn{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.mrt30{
+  margin-bottom: 30px;
+}
+.wrapbtn{
+  display: flex;
+  flex-direction: row-reverse;
+}
+.dragwrap{
+  height: 150px!important;
 }
