--- a/frontend/myapp/component/navbar.less
+++ b/frontend/myapp/component/navbar.less
@@ -97,7 +97,7 @@
   padding: 20px;
   border-radius: 5px;
   width: 1275px;
-  height: 200px;
+  // height: 200px;
   max-width: 100%;
   margin: auto;
   box-shadow: 0px 0px 10px transparent;
