navbar fixed in page

--- a/frontend/myapp/component/navbar.less
+++ b/frontend/myapp/component/navbar.less
@@ -54,6 +54,9 @@
 .layout {
   background-color: transparent;
   width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
 }
 .layout .fixed-tabs {
   padding: 0;
@@ -91,6 +94,7 @@
 }
 .welcome_div {
   max-width: 100%;
+  margin-top: 60px;
 }
 .welcome_container {
   background: transparent;
