--- a/frontend/myapp/src/pages/index.less
+++ b/frontend/myapp/src/pages/index.less
@@ -41,7 +41,12 @@
   margin: auto;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
-
+.card-description{
+  display: inline-block;
+    height: 220px;
+    overflow: hidden;
+    width: 100%;
+}
 .recently_select_course{
   align-self: flex-start;
   position: relative;
@@ -196,8 +201,8 @@
   width: 50%;
   margin-top: 20px;
 }.intro-card .ant-card-meta-detail {
-  margin-top: 20px;
-  margin-left: 50px;
+  margin-top: 15px;
+  margin-left: 20px;
 }
 // .custom-card  .ant-card-meta-avatar {
 //   width: 50%;
