--- a/frontend/myapp/component/navbar.less
+++ b/frontend/myapp/component/navbar.less
@@ -1,15 +1,22 @@
-.custom-tabs{
+.tabs_wrap{
   display: inline-block;
   color: white;
-  font-size: 18px;
   font-weight: bold;
   text-transform: uppercase;
-  font-family:Comic Sans MS;
-  margin: 0;
-  padding: 2px;
-  background: transparent;
-  height: 64px;
   
+}
+.tabs_wrap div{
+  display: inline-block;
+  font-family: "Comic Sans MS";
+  font-size: 14px;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 64px;
+  cursor: pointer;
+}
+.tabs_active{
+  // border: 1px solid red;
+  background-color: #484E56;
 }
 
 .custom-tabs .ant-tabs-tab-active .ant-tabs-tab-btn {
