studentcourse videoimg fixed bug

--- a/frontend/myapp/src/pages/studentcourse.less
+++ b/frontend/myapp/src/pages/studentcourse.less
@@ -157,9 +157,13 @@
   font-size: 16px;
 }
 .materials_img{
-  max-width: 500px;
+  max-width: 600px;
   text-align: center;
   margin: 0 auto;
+  margin-bottom: 20px;
+}
+.materials_img img{
+  max-width: 600px;
 }
 .downloadicon{
   width: 20px;
