--- a/frontend/myapp/src/pages/studentcourse.less
+++ b/frontend/myapp/src/pages/studentcourse.less
@@ -246,3 +246,14 @@
 .dragwrap{
   height: 150px!important;
 }
+.gotopicon{
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  cursor: pointer;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 1px dashed blue;
+}
