--- a/frontend/myapp/component/footer.less
+++ b/frontend/myapp/component/footer.less
@@ -1,6 +1,6 @@
 .footer {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     font-size: 15px;
