--- a/frontend/myapp/src/pages/index.less
+++ b/frontend/myapp/src/pages/index.less
@@ -148,6 +148,25 @@
   grid-gap: 20px;
   margin-top: 0px;
 }
+
+.calendar_and_exp {
+  display: flex;
+  flex-direction: column;
+}
+.exp {
+  background: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  border-radius: 5px;
+  width: 400px;
+  height: 150px;
+  max-width: 90%;
+  margin: auto;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+}
+
 .card {
   padding: 20px;
   width: 800px;
@@ -217,6 +236,7 @@
   margin: auto;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
   margin-top: 11%;
+  margin-bottom: -50px;
 }
 
 .calendar .ant-picker-calendar-full .ant-picker-calendar-cell {
@@ -288,6 +308,10 @@
     height: auto;
     margin-top: 30px;
   }
+  .exp {
+    margin-top: 100px;
+    width: 800px;
+  }
   .card {
     margin-top: 10px;
   }
@@ -353,6 +377,9 @@
     left: 50%;
     width: 400px;
   }
+  .exp {
+    width: 400px;
+  }
   
 }
 @media (max-width: 400px) {
@@ -368,7 +395,7 @@
 }
 .container_intro {
   width: 330px;
-  height: 200px;
+  height: auto;
 }
 .recently_select_course{
   align-self: flex-start;
@@ -396,7 +423,10 @@
 }
 .calendar {
   width: 330px;
-  height: 370px;
+  height: 400px;
+}
+.exp {
+  width: 80%;
 }
 .button-container.show {
   left: 48%;
