--- a/frontend/myapp/src/pages/StaffDashboardContent.less
+++ b/frontend/myapp/src/pages/StaffDashboardContent.less
@@ -34,7 +34,12 @@
   border: none;
   background-color: #EFF1F6;
 }
-
+@media screen and (max-width: 1007px) {
+  .staff-dashboard .ant-layout{
+    width: 80%;
+    margin-left: 10%;
+  }
+}
 @media screen and (max-width: 375px) {
   .staff-dashboard .left-sider .left-title {
     font-size: 10px;
