combine student streaming to student dashboard

--- a/frontend/myapp/src/pages/index.less
+++ b/frontend/myapp/src/pages/index.less
@@ -36,7 +36,7 @@
   padding: 20px;
   border-radius: 5px;
   width: 800px;
-  height: 325px;
+  height: auto;
   max-width: 90%;
   margin: auto;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
@@ -325,7 +325,6 @@
 @media (max-width: 769px) {
   .container_intro {
     width: 400px;
-    height: 250px;
     margin-bottom: 40px;
   }
   .recently_select_course{
