--- a/frontend/myapp/src/pages/studentforums.less
+++ b/frontend/myapp/src/pages/studentforums.less
@@ -71,15 +71,15 @@
     font-size: 13px;
     cursor: pointer;
   }
-  .tag_general{
+  .tag_blue{
     color: #6666FF;
     border: 1px dashed #0E8088;
   }
-  .tag_quiz{
+  .tag_red{
     color: #FF335C;
     border: 1px dashed #AE4132;
   }
-  .tag_ass{
+  .tag_pink{
     color: #FF99FF;
     border: 1px dashed #6666FF;
   }
@@ -87,7 +87,8 @@
     background-color: #B0E3E6;
   }
   .btn_add{
-    height: 34px;
+    height: 32px;
+    margin-left: 20px;
   }
   .stu_forum_content_wrap{
     // border: 1px solid red;
@@ -148,6 +149,9 @@
   }
   .mlt{
     margin-left: 20px;
+  }
+  .mlt30{
+    margin-left: 30px;
   }
   .mlt54{
     margin-left: 54px;
