--- a/frontend/myapp/src/pages/studentcourse.less
+++ b/frontend/myapp/src/pages/studentcourse.less
@@ -291,3 +291,9 @@
   border-radius: 50%;
   border: 1px dashed blue;
 }
+.nocoursewrap{
+  height: 400px;
+  padding-top: 100px;
+  padding-left: 200px;
+  text-align: center;
+}
