--- a/frontend/myapp/src/pages/confirmpassword.less
+++ b/frontend/myapp/src/pages/confirmpassword.less
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(../../public/assert/login.jpeg);
+    background-image: url(../../../images/login.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
