--- a/frontend/myapp/src/pages/index.less
+++ b/frontend/myapp/src/pages/index.less
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(../../public/assert/user.png);
+  background-image: url(../../../images/user.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
