--- a/frontend/myapp/src/pages/StaffDashboardContent.less
+++ b/frontend/myapp/src/pages/StaffDashboardContent.less
@@ -76,8 +76,8 @@
 }
 .ant-collapse-content{
   // border: 1px solid red;
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px!important;
+  border-bottom-left-radius: 10px!important;
 }
 @media screen and (max-width: 1007px) {
   .staff-dashboard .ant-layout{
