--- a/frontend/myapp/src/pages/index.less
+++ b/frontend/myapp/src/pages/index.less
@@ -31,6 +31,12 @@
   margin: auto;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
+.container_timeline .ant-list-empty-text{
+  margin-top: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .container_intro{
   background: #ffffff;
   padding: 20px;
@@ -306,6 +312,9 @@
     max-width: 90%;
     margin: auto;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+  }
+  .container_timeline .ant-list-empty-text{
+    margin-top: 0px;
   }
   .recently_select_course{
     align-self: flex-start;
