--- a/frontend/myapp/component/chatbot.less
+++ b/frontend/myapp/component/chatbot.less
@@ -56,3 +56,8 @@
     border-radius: 5px;
     margin-bottom: 5px;
   }
+  .wid_800{
+    width: 800px;
+    margin: 0 auto;
+    border-radius: 20px;
+  }
